hooked up custom sign in and sign up pages to authentication system

--- a/app/FrappuccinoParadise/templates/registration/login.html
+++ b/app/FrappuccinoParadise/templates/registration/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% block content %}
 
   {% if form.errors %}
@@ -12,24 +13,8 @@
       <p>Please login to see this page.</p>
     {% endif %}
   {% endif %}
-
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-      <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-      </tr>
-    </table>
-    <input type="submit" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
-  </form>
-
-  {# Assumes you setup the password_reset view in your URLconf #}
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+  
+  <div id='react-login-root' />
+  <script src="{% static 'login.bundle.js' %}"></script>
 
 {% endblock %}
