--- a/app/FrappuccinoParadise/templates/FrappuccinoParadise/index.html
+++ b/app/FrappuccinoParadise/templates/FrappuccinoParadise/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id='react-root' />
-    <script src="{% static 'index-bundle.js' %}"></script>
+    <script src="{% static 'index.bundle.js' %}"></script>
   </body>
 </html>
